[package]
name = "tikv-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
hdrhistogram = "7.5.2"
lazy_static = "1.4.0"
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"
# patch pathfinder_simd
[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", branch = "master" }